A little cleanup related to and suggested by GERONIMO-1426
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.1@399079 13f79535-47bb-0310-9956-ffa450edef68